# FNAL-QCDecoding-FPGA

./: .gitignore  CNNModel_quantized.py  QUANTIZATION_EXPERIMENTS.ipynb  README.md  RUN_LOG.md  build_quant_notebook.py  claude.MD  collate_pareto.py  collate_profile.py  eval_on_tail.py  generate_pools.py  make_fresh_tail.py  phase1_mcnemar.py  phase2a_collate.py  phase2a_identity_check.py  phase2a_mcnemar.py  phase2a_sweep.py  profile_ranges.py  pyproject.toml  sweep_quantized.py  train_one.py  train_one_quantized.py  utilities_arrayops.py
analysis_notebooks/: QUANTIZATION_EXPERIMENTS.ipynb  WORKLOG_pL_vs_N_sweep.ipynb  analysis_plots.ipynb  baseline_mwpm.ipynb  crumble_polygons.py  debug_training_circuit.stim  failure_case_explorer.ipynb
docs/: RUN_LOG.md  profile_tables.txt
experiment_log/: INDEX.md
experiment_log/docs/: DEMO_CRUMBLE.md  EXPERIMENTS.md  QUANTIZATION_SCHEME.md  RCNN_d5_r3_ladder_REFERENCE.md  RUN_LOG.md  SWEEP_SUMMARY.md  WorkLog-2026-06-22-2122.md
experiment_log/notebooks/: EXPERIMENTS_LOG.ipynb  WORKLOG_pL_vs_N_sweep.ipynb
experiment_log/plots/: crumble.html  detslice_ops.html  matchgraph.html
experiment_log/results_snapshot/: README.md  anchor.csv  benchmark_rcnn.csv  det_runA.csv  det_runB.csv  lrfloor.csv  probe_C1.csv  probe_C2.csv  probe_P1.csv  probe_P2.csv  probe_S1.csv  probe_S2.csv  probe_T1.csv  probe_T2.csv  results_fullprecision.csv  results_mwpm.csv  results_quantization_sweep.csv  results_quantization_sweep_qdense.csv  sweep.csv
rcnn_threshold/out_20M/: mcnemar_20M.csv  rcnn_d5_p0.010_r3_seed0_ntr20000000.csv  rcnn_d5_p0.010_r3_seed0_ntr20000000.history.json  rcnn_d5_p0.010_r3_seed0_ntr20000000.weights.h5  rcnn_d5_p0.010_r3_seed1_ntr20000000.csv  rcnn_d5_p0.010_r3_seed1_ntr20000000.history.json  rcnn_d5_p0.010_r3_seed1_ntr20000000.weights.h5  rcnn_d5_p0.010_r3_seed2_ntr20000000.csv  rcnn_d5_p0.010_r3_seed2_ntr20000000.history.json  rcnn_d5_p0.010_r3_seed2_ntr20000000.weights.h5
rcnn_threshold/out_q/: fp32_anchor.csv  rcnn_d5_p0.010_r3_w2_seed0_ntr10000000.csv  rcnn_d5_p0.010_r3_w2_seed2_ntr10000000.csv  rcnn_d5_p0.010_r3_w2_seed2_ntr10000000.history.json  rcnn_d5_p0.010_r3_w3_seed0_ntr10000000.csv  (+9 more)
(+188 files in other folders)
